@@ -237,6 +237,7 @@ const std::array<NetworkAction, static_cast<size_t>(NetworkPermission::Count)> N
         {
             GameCommand::Cheat,
             GameCommand::SetDate,
+            GameCommand::FreezeRideRating,
         },
     },
     NetworkAction{
