@@ -21,6 +21,7 @@
 - Improved: [#17868] [Plugin] You can now change active tab of a custom window programmatically.
 - Improved: [#17909] Track elements that are not supported by any train are now hidden by default.
 - Improved: [#17924] Improved performance when loading JSON object images from a .DAT file.
+- Improved: [#17955] Modifying ratings via in-game console is now multiplayer-safe and also freezes the ratings.
 - Change: [#9104] Calculate maze support costs.
 - Change: [#17319] Giant screenshots are now cropped to the horizontal view-clipping selection.
 - Change: [#17499] Update error text when using vehicle incompatible with TD6 and add error when using incompatible track elements.
